--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ const now = Date.now();
 const savedTime = localStorage.getItem("firstTime");
 
 // 10 minutes = 600000 milliseconds
-const delay = 600000;
+const delay = 1800000;
 
 if (!savedTime) {
   // first time open
